# IoT-Based-Drive

./: .gitignore  CMakeLists.txt  readme.md
concrete/: CMakeLists.txt
concrete/include/: AMessage.hpp  ATaskArgs.hpp  CMakeLists.txt  FileManager.hpp  IFileManager.hpp  IMinionProxy.hpp  IResponse.hpp  MasterCommandRead.hpp  MasterCommandWrite.hpp  MasterProxy.hpp  MinionCommandRead.hpp  MinionCommandWrite.hpp  MinionManager.hpp  MinionProxy.hpp  MinionReadArgs.hpp  MinionWriteArgs.hpp  NBD.hpp  NBDProxy.hpp  NBDReadArgs.hpp  NBDWriteArgs.hpp  ReadMessageResponse.hpp  ReadMessageSend.hpp  ReadResponse.hpp  ResponseManager.hpp  Ticket.hpp  UID.hpp  WriteMessageResponse.hpp  WriteMessageSend.hpp  WriteResponse.hpp
concrete/src/: AMessage.cpp  ATaskArgs.cpp  CMakeLists.txt  FileManager.cpp  MasterCommandRead.cpp  MasterCommandWrite.cpp  MasterProxy.cpp  MinionCommandRead.cpp  MinionCommandWrite.cpp  MinionManager.cpp  MinionProxy.cpp  MinionReadArgs.cpp  MinionWriteArgs.cpp  NBD.cpp  NBDProxy.cpp  NBDReadArgs.cpp  NBDWriteArgs.cpp  ReadMessageResponse.cpp  ReadMessageSend.cpp  ReadResponse.cpp  ResponseManager.cpp  Ticket.cpp  UID.cpp  WriteMessageResponse.cpp  WriteMessageSend.cpp  WriteResponse.cpp
concrete/test/: CMakeLists.txt  FileCreator.cpp  TestAMessages.cpp  TestMinion.cpp
framework/: CMakeLists.txt
framework/include/: AsyncInjection.hpp  CMakeLists.txt  DirMonitor.hpp  Dispatcher.hpp  DllLoader.hpp  FW_TPTask.hpp  Factory.hpp  Framework.hpp  Handleton.hpp  ICommand.hpp  IInputProxy.hpp  IListener.hpp  ISchedulerTask.hpp  ITPTask.hpp  ITaskArgs.hpp  Logger.hpp  Reactor.hpp  Scheduler.hpp  Singleton.hpp  Socket.hpp  TCPClient.hpp  TCPConnection.hpp  TCPServer.hpp  TCPSocket.hpp  ThreadPool.hpp  Timer.hpp  UDPSocket.hpp  WaitableQueue.hpp  WaitableQueueContainer.hpp
framework/src/: AsyncInjection.cpp  CMakeLists.txt  DirMonitor.cpp  DllLoader.cpp  FW_TPTask.cpp  Framework.cpp  Handleton.cpp  IListener.cpp  Logger.cpp  Reactor.cpp  Scheduler.cpp  Socket.cpp  TCPClient.cpp  TCPConnection.cpp  TCPServer.cpp  TCPSocket.cpp  ThreadPool.cpp  Timer.cpp  UDPSocket.cpp
framework/test/: CMakeLists.txt  TestAsyncInjection.cpp  TestDirMonitor.cpp  TestDispatcher.cpp  TestDllLoader.cpp  TestFactory.cpp  TestHandleton.cpp  TestHandletondll1.cpp  TestHandletondll2.cpp  TestLogger.cpp  TestMaster.cpp  TestReactor.cpp  TestScheduler.cpp  TestSingleton.cpp  TestThreadPool.cpp  TestWaitableQueue.cpp
